syntax = "proto3";

package common_proto;

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/xdorro/golang-grpc-base-project/api/proto/common;common_proto";

message UUIDRequest {
  // The resource name of the book to be deleted, for example:
  string id = 1;
}

message SlugRequest {
  // The resource name of the book to be deleted, for example:
  string slug = 1;
}