syntax = "proto3";

package user_proto;

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/xdorro/golang-grpc-base-project/api/proto/v1/user;user_proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "api/proto/v1/common/common.proto";

// Here is the overall greeting service definition where we define all our endpoints
service UserService {
  // Find all Users
  rpc FindAllUsers (FindAllUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {
      get: "/api/v1/users"
    };
  }

  // Find User by ID
  rpc FindUserByID (common_proto.UUIDRequest) returns (User) {
    option (google.api.http) = {
      get: "/api/v1/users/{id=*}"
    };
  }

  // Create new User
  rpc CreateUser (CreateUserRequest) returns (google.rpc.Status) {
    option (google.api.http) = {
      post: "/api/v1/users"
      body: "*"
    };
  }

  // Update User by ID
  rpc UpdateUser (UpdateUserRequest) returns (google.rpc.Status) {
    option (google.api.http) = {
      put: "/api/v1/users/{id=*}"
      body: "*"
    };
  }

  // Delete User
  rpc DeleteUser (common_proto.UUIDRequest) returns (google.rpc.Status) {
    option (google.api.http) = {
      delete: "/api/v1/users/{id=*}"
    };
  }
}

message FindAllUsersRequest {
  int32 page = 1;
}

message ListUsersResponse {
  // Users
  repeated User data = 1;

  int32 next_page = 2;
}

message User {
  // Output only. Id of the user.
  string id = 1;

  // Output only. Name of the user.
  string name = 2;

  // Output only. Email of the user.
  string email = 3;

  // Output only. Status of the user.
  int32 status = 4;
}

// The request create new User
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  int32 status = 4;
  string role = 5;
}

// The request update User
message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional int32 status = 4;
  optional string role = 5;
}